Enable auth2 healcheck

--- a/static/auth2serverinfo.html
+++ b/static/auth2serverinfo.html
@@ -1,54 +1,12 @@
-<html>
-    <head>
-        <title></title>
-        <style>
-            table {
-            	border-collapse: collapse;
-                font-family: Tahoma, Geneva, sans-serif;
-            }
-            table td {
-            	padding: 15px;
-            }
-            table thead th {
-            	background-color: #54585d;
-            	color: #ffffff;
-            	font-weight: bold;
-            	font-size: 13px;
-            	border: 1px solid #54585d;
-            }
-            table tbody td {
-            	color: #636363;
-            	border: 1px solid #dddfe1;
-            }
-            table tbody tr {
-            	background-color: #f9fafb;
-            }
-            table tbody tr:nth-child(odd) {
-            	background-color: #ffffff;
-            }
-            table caption {
-              font-weight: bold;
-              font-size: 16px;
-              color: #636363;
-              margin: 20px;
-             }
-        </style>       
-    </head>
-    <body>
-        <table>
-            <caption><span id="clusterhead"></span></caption>
-            <thead>
-                <tr>
-                    <th>Auth2 Server</th>
-                    <th>Ready Time</th>
-                    <th>Heartbeat</th>
-                    <th>ProcessingTime</th>
-                    <th>Status</th>
-                    <th>Resource Usage</th>
-                    <th>Monitoring</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-    </body>
-</html>
+<tr>
+    <td id='serviceid'><\/td>
+    <td id='readytime'><\/td>
+    <td id='heartbeat'><\/td>
+    <td id='processingtime'><\/td>
+    <td id='status'><\/td>
+    <td id='resusage'></td>
+    <td>
+        <ul id='monitoring'>
+        </ul>
+    </td>
+</tr>
